--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.InfDB.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\mysql-connector-java-8.0.23.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
