--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\Karam Al-Akhras\\Deskt
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Karam\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\Karam Al-Akhras\\AppData\\Roaming\\NetBeans\\15\\build.properties
