fixade UI till alien o agent login

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,8 +2,10 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\ninao\\OneDrive\\Dokument\\DatabasfilerMedlemsDB\\InfDB.jar
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\ninao\\OneDrive\\Dokument\\DatabasfilerMedlemsDB\\mysql-connector-java-8.0.23.jar
+file.reference.InfDB.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\mysql-connector-java-8.0.23.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
