tog bort koden som inte gick att kompilera

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,6 +72,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.InfDB.jar=Databasfiler/javadoc_InfDB.zip!/javadoc/
+javadoc.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\javadoc_InfDB.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -86,7 +87,7 @@ main.class=mibg3.MiBG3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_19
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
