--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,10 +2,11 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\Karam Al-Akhras\\Desktop\\MenInBlack Realisering\\MiBG3\\Databasfiler\\InfDB.jar
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\ninao\\OneDrive\\Dokument\\DatabasfilerMedlemsDB\\mysql-connector-java-8.0.23.jar
-file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\Karam Al-Akhras\\Desktop\\MenInBlack Realisering\\MiBG3\\Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.InfDB.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
+file.reference.InfDB.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\ninao\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\d-aly\\AppData\\Roaming\\NetBeans\\15\\build.properties
