--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
+annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -36,16 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/MiBG3
 endorsed.classpath=
 excludes=
 file.reference.InfDB.jar=Databasfiler\\InfDB.jar
-file.reference.InfDB.jar-1=..\\..\\NetBeansProjects\\mib projekt\\Databasfiler\\InfDB.jar
 file.reference.mysql-connector-java-8.0.23.jar=Databasfiler\\mysql-connector-java-8.0.23.jar
-file.reference.mysql-connector-java-8.0.23.jar-1=..\\..\\NetBeansProjects\\mib projekt\\Databasfiler\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${file.reference.InfDB.jar}:\
-    ${file.reference.InfDB.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +68,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.InfDB.jar=Databasfiler/javadoc_InfDB.zip!/javadoc/
-javadoc.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\javadoc_InfDB.zip!/javadoc/
+javadoc.reference.mysql-connector-java-8.0.23.jar=Databasfiler\\javadoc_InfDB.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
