--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,17 @@ dist.jlink.output=${dist.jlink.dir}/MiBG3
 endorsed.classpath=
 excludes=
 file.reference.InfDB.jar=Databasfiler\\InfDB.jar
+file.reference.InfDB.jar-2=Databasfiler\\InfDB.jar
 file.reference.mysql-connector-java-8.0.23.jar=Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar-2=Databasfiler\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.23.jar}:\
     ${file.reference.InfDB.jar}:\
-# Space-separated list of extra javac options
+    \# Space-separated list of extra javac options:\
+    ${file.reference.InfDB.jar-2}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar-2}
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
