--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,6 +72,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.InfDB.jar=Databasfiler/javadoc_InfDB.zip!/javadoc/
+javadoc.reference.InfDB.jar-2=Databasfiler/javadoc_InfDB.zip!/javadoc/
 javadoc.reference.mysql-connector-java-8.0.23.jar=Databasfiler\\javadoc_InfDB.zip!/javadoc/
 javadoc.splitindex=true
 javadoc.use=true
