--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,9 +2,9 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.InfDB.jar=C:\\Users\\ninao\\OneDrive\\Dokument\\GitHub\\MiBG3\\Databasfiler\\InfDB.jar
+file.reference.InfDB.jar=C:\\Users\\d-aly\\Documents\\GitHub\\MiBG3\\MiBG3\\Databasfiler\\InfDB.jar
 file.reference.InfDB.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\ninao\\OneDrive\\Dokument\\GitHub\\MiBG3\\Databasfiler\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\d-aly\\Documents\\GitHub\\MiBG3\\MiBG3\\Databasfiler\\mysql-connector-java-8.0.23.jar
 file.reference.mysql-connector-java-8.0.23.jar-1=C:\\Users\\d-aly\\Documents\\NetBeansProjects\\mib\\Databasfiler\\InfDB.jar
 javac.debug=true
 javadoc.preview=true
