--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ replay_pid*
 nbproject/private/private.properties
 *.properties
 *.properties
+*.properties
+*.properties
+*.properties
+nbproject/genfiles.properties
+nbproject/private/private.properties
+nbproject/project.properties
