--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ nbproject/private/private.properties
 nbproject/genfiles.properties
 nbproject/private/private.properties
 nbproject/project.properties
+nbproject/private/private.properties
+nbproject/private/private.xml
