--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ nbproject/private/private.properties
 nbproject/project.properties
 nbproject/private/private.properties
 nbproject/private/private.xml
+nbproject/build-impl.xml
+nbproject/genfiles.properties
+nbproject/project.properties
+nbproject/project.xml
