--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ nbproject/genfiles.properties
 nbproject/project.properties
 nbproject/project.xml
 nbproject/private/private.xml
+nbproject/private/private.properties
