Admin och mainklasser kommenterade. Bara agent och alien kvar.,

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ nbproject/project.properties
 nbproject/project.xml
 nbproject/private/private.xml
 nbproject/private/private.properties
+nbproject/private/private.properties
