--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ nbproject/project.xml
 nbproject/private/private.xml
 nbproject/private/private.properties
 nbproject/private/private.properties
+nbproject/private/private.xml
